@@ -1,15 +1,7 @@
 Question: Is fvwm1/fvwm2 (version ...) year 2000 compliant?
 
-Answer 1 (very short): No.
-
-Answer 2 (slightly longer): We don't care.
-
-Answer 3 (not so short): We all have a personal opinion on this topic, but we
-won't tell.
-
-Answer 4 (long): Fvwm is a free software project. It is given away without
+Answer: Perhaps. Fvwm is a free software project. It is given away without
 charge and without any warranty. Everybody is invited to obtain the sources and
 check the code for year 2000 compliance (see our web page how to get the latest
-sources). If this question is so important to you, why don't you set your clock
-to a date ten years in the future and try yourself?
+sources). We won't make any promises.
 
