@@ -1401,7 +1401,7 @@ this font to the default font (see \fIDefaultFont\fP) you may omit
 .IP "Iconify [ \fIvalue\fP ]"
 Iconifies a window if it is not already iconified or de-iconifies it
 if it is already iconified.  If the optional argument \fIvalue\fP is
-positive only iconification will be allowed.  It the optional
+positive only iconification will be allowed.  If the optional
 argument is negative only de-iconification will be allowed.
 
 
